--- a/style.css
+++ b/style.css
@@ -113,9 +113,8 @@ footer {
     flex-direction: row;
     align-items: center; /* Aligns the image and text vertically centered */
     padding: 40px;
-    background-color: #e0e5f1;
+    background-color: #c9daf8;
     margin: 20px auto;
-    width: 90%;
 }
 
 .profile-photo img {
@@ -183,11 +182,11 @@ footer {
 
 /* CV Page Styling */
 .cv-content {
-    width: 90%;
-    max-width: 800px;
     margin: 20px auto;
+    padding: 40px; /* Adds padding to the left and right */
     line-height: 1.6;
     color: #333;
+    background-color: #c9daf8;
 }
 
 .cv-content h3 {
